--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
+    "eslint": "^2.0.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
     "gulp-changed": "^1.3.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-filter": "^3.0.1",
     "gulp-if": "^2.0.0",
     "gulp-uglify": "^1.5.2",
