--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
     "run-sequence": "^1.1.5",
+    "tern-phaser": "^0.2.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^3.32.0"
   },
